# leisure-teatime

./: .editorconfig  .gitignore  LICENSE  README.md  pdm.toml  pyproject.toml  test.json
core/: __main__.py  cli.py  config.py  events.py  logging.py  manager.py  task_manager.py
core/auto/: example.py  scheduler.py
core/browser/: controller.py  fetcher.py
core/cli/: commands.py
core/data/: extractor.py  processor.py  storage.py
core/fetchers/: api.py  browser.py  tui_cmd.py
core/tasks/: manager.py  metadata.py
core/utils/: cli.py  data.py  decorators.py  files.py  functional.py  logging.py  path.py  paths.py  trie.py
release/: deploy.py
templates/: MAIN.py  TEST.py  TEXT.py  automate.py  fetch.py  pagination.py  scrape.py
tools/: packager.py
work/config/: TEMPLATE_MAIN.py  TEMPLATE_TEXT.py  constants.py
work/tools/: helpers.py  logging_utils.py  playwright_tool.py  task_executor.py  task_generator.py
