[project]
name = "leisure-teatime"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "D7x7z49", email = "85430783+D7x7z49@users.noreply.github.com"},
]
dependencies = [
    "playwright>=1.50.0",
    "click>=8.1.8",
    "python-dotenv>=1.0.1",
    "prompt-toolkit>=3.0.50",
    "lxml>=5.3.1",
    "ijson>=3.3.0",
    "pyautogui>=0.9.54",
    "apscheduler>=3.11.0",
    "aiofiles>=24.1.0",
    "pandas>=2.2.3",
    "matplotlib>=3.10.1",
    "jupyterlab>=4.3.5",
    "pydantic>=2.10.6",
    "psutil>=7.0.0",
    "openpyxl>=3.1.5"

]
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false


[tool.pdm.scripts]
dev = "python -m core.cli.commands"

add = "python -m core.cli.commands add {args}"
use = "python -m core.cli.commands use {args}"
list = "python -m core.cli.commands list"
remove = "python -m core.cli.commands remove {args}"
alias = "python -m core.cli.commands alias {args}"
history = "python -m core.cli.commands history"
